--- a/Sudoku.UI/Sudoku.UI/Views/Home/Index.cshtml
+++ b/Sudoku.UI/Sudoku.UI/Views/Home/Index.cshtml
@@ -1,7 +1,21 @@
-﻿@{
+﻿@model SudokuGrid
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="div-sudoku-grid">
     <h2 class="display-4">Solve my Sudoku puzzle!</h2>
+
+    <table class="table-sudoku-grid">
+        @for (int y = 2; y >= 0; y--)
+        {
+            <tr>
+                @for (int x = 0; x < 3; x++)
+                {
+                    <td class="table-sudoku-grid-cell">@x, @y</td>
+                }
+            </tr>
+        }
+    </table>
 </div>
