--- a/Sudoku.UI/Sudoku.UI/Views/Home/Index.cshtml
+++ b/Sudoku.UI/Sudoku.UI/Views/Home/Index.cshtml
@@ -4,18 +4,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="div-sudoku-grid">
-    <h2 class="display-4">Solve my Sudoku puzzle!</h2>
-
-    <table class="table-sudoku-grid">
-        @for (int y = 2; y >= 0; y--)
-        {
-            <tr>
-                @for (int x = 0; x < 3; x++)
+    <div class="div-sudoku-grid">
+        <h2 class="display-4">Solve my Sudoku puzzle!</h2>
+        <table class="table-sudoku-grid">
+            @for (int row = 1; row < 10; row++)
+            {
+                <tr>
+                @foreach (var cell in Model.Cells.Where(x => x.RowNumber.Equals(row)))
                 {
-                    <td class="table-sudoku-grid-cell">@x, @y</td>
+                    <td class="table-sudoku-grid-cell">@cell.Value</td>
                 }
-            </tr>
-        }
-    </table>
-</div>
+
+                </tr>
+            }
+        </table>
+    </div>
